<resources>
    <string name="app_name">MediaHub</string>
    <string name="auth_button_hint">Click on the redirect button below\nThis will lead you to the MyAnimeList website where you can log in and allow access to your account.</string>
    <string name="episode_count_default_hint">\??/??</string>
    <string name="account_created_on_hint">Account created on</string>
    <string name="no_anime_added_hint">No anime added under this filter</string>
    <string name="no_browser_found_hint">No browser found in the phone</string>
    <string name="share_hint">Share here</string>
    <string name="sort_anime_by_hint">Sort anime by</string>
    <string name="sort_manga_by_hint">Sort manga by</string>
    <string name="coming_soon_hint">Coming soon!</string>
    <string name="media_set_status_hint">Set status as</string>
    <string name="media_set_score_hint">Set score as</string>
    <string name="anime_watched_till_hint">Watched till episode</string>
    <string name="manga_volume_till_hint">Read till volume</string>
    <string name="manga_chapter_till_hint">Read till chapter</string>
    <string name="alternate_titles_hint">Alternate titles</string>
    <string name="anime_search_no_result_hint">No anime found for query</string>
    <string name="anime_search_hint">Search for any anime</string>
    <string name="manga_search_no_result_hint">"No manga found for query"</string>
    <string name="manga_search_hint">Search for any manga</string>
    <string name="log_out_hint">Log out?</string>
    <string name="log_out_message">This is permanent and you have to log in again after to use MediaHub.</string>
    <string name="log_out_positive_hint">Yes, Log me out</string>
    <string name="log_out_negative_hint">No, take me back</string>
    <string name="view_licenses_hint">View licenses</string>
    <string name="n_a">N/A</string>
    <string name="no_count_fount_marker">\??</string>
    <string name="media_progress_template">%1$d/%2$s</string>
    <string name="media_rating_template">%d/10</string>
    <string name="media_type_template">Type : %s</string>
    <string name="media_rank_template">Rank : %d</string>
    <string name="anime_season_template">%1$s %2$d</string>
    <string name="manga_author_template">%1$s %2$s</string>
    <string name="anime_original_source_template">From %s</string>
    <string name="anime_season_unknown_template">Season : %s</string>
    <string name="app_version_template">v%s</string>
    <plurals name="rating_hint">
        <item quantity="zero">★ 0</item>
        <item quantity="one">★ 1</item>
        <item quantity="other">★ %.1f</item>
    </plurals>
    <plurals name="recommendation_times">
        <item quantity="one">Recommended 1 time</item>
        <item quantity="other">Recommended %d times</item>
    </plurals>
    <plurals name="re_watch_times">
        <item quantity="one">Re-watched 1 time</item>
        <item quantity="other">Re-watched %d times</item>
    </plurals>
    <plurals name="episode_count_template">
        <item quantity="one">1 ep</item>
        <item quantity="other">%s eps</item>
    </plurals>
    <plurals name="episode_count_full_template">
        <item quantity="one">1 episode</item>
        <item quantity="other">%s episodes</item>
    </plurals>
    <plurals name="days_count_template">
        <item quantity="one">1 day</item>
        <item quantity="other">%s days</item>
    </plurals>
    <plurals name="volume_count_template">
        <item quantity="one">1 vol</item>
        <item quantity="other">%s vols</item>
    </plurals>
    <plurals name="chapter_count_template">
        <item quantity="one">1 chap</item>
        <item quantity="other">%s chaps</item>
    </plurals>
    <string name="anime_nsfw_rating_white">SFW</string>
    <string name="anime_nsfw_rating_gray">NSFW?</string>
    <string name="anime_nsfw_rating_black">NSFW</string>
    <string name="anime_nsfw_rating_unknown">SFW : N/A</string>
    <string name="anime_airing_finished">Finished airing</string>
    <string name="anime_airing_ongoing">Currently airing</string>
    <string name="anime_airing_not_yet_aired">Yet to be aired</string>
    <string name="anime_airing_unknown">Airing status : N/A</string>
    <string name="anime_rating_g">G - All ages</string>
    <string name="anime_rating_pg">PG</string>
    <string name="anime_rating_pg13">PG 13</string>
    <string name="anime_rating_r">R - 17+</string>
    <string name="anime_rating_r_plus">R+</string>
    <string name="anime_rating_rx">Rx - Hentai</string>
    <string name="anime_broadcast_on_day">On %s</string>
    <string name="manga_nsfw_rating_white">Safe for work (SFW)</string>
    <string name="manga_nsfw_rating_gray">Maybe not safe for work (NSFW)</string>
    <string name="manga_nsfw_rating_black">Not safe for work (NSFW)</string>
    <string name="manga_publishing_finished">Finished publishing</string>
    <string name="manga_publishing_ongoing">Currently publishing</string>
    <string name="manga_publishing_not_yet_aired">Yet to be published</string>
    <string name="manga_publishing_unknown">Publishing status : N/A</string>
    <string name="alternate_titles_html"><![CDATA[<b>English title</b> : %1$s<br><b>Japanese title</b> : %2$s<br><b>Synonyms</b> : %3$s]]></string>
    <string name="anime_stats_html"><![CDATA[<b>Number of users with this anime in list</b> : %1$d<br><b>Watching count</b> : %2$d<br><b>Planned count</b> : %3$d<br><b>Completed count</b> : %4$d<br><b>Dropped count</b> : %5$d<br><b>On hold count</b> : %6$d]]></string>
    <string name="manga_stats_html"><![CDATA[<b>Added</b> in %1$s manga lists<br><b>Scored</b> by %2$s users]]></string>
    <string name="anime_episode_length_n_a">N/A per ep</string>
    <string name="anime_episode_length_mins">%dm per ep</string>
    <string name="anime_episode_length_hours">%1$dh %2$dm per ep</string>
    <string name="anime_next_episode_prefix">Episode\u0020</string>
    <string name="anime_next_episode_suffix">\u0020airs in\u0020</string>
    <string name="anime_next_episode_airing_n_a">0h 0m 0s</string>
    <string name="anime_next_episode_airing_days">%1$dd %2$dh %3$dm</string>
    <string name="anime_next_episode_airing_hours">%1$dh %2$dm</string>
    <string name="anime_next_episode_airing_minutes">%dm</string>
    <string name="anime_ranking_all">All</string>
    <string name="anime_ranking_airing">Airing</string>
    <string name="anime_ranking_upcoming">Upcoming</string>
    <string name="anime_ranking_tv">TV</string>
    <string name="anime_ranking_ova">OVA</string>
    <string name="anime_ranking_movie">Movie</string>
    <string name="anime_ranking_specials">Specials</string>
    <string name="anime_ranking_by_popularity">By popularity</string>
    <string name="anime_ranking_in_your_list">In your list</string>
    <string name="anime_status_all">All</string>
    <string name="anime_status_watching">Watching</string>
    <string name="anime_status_planned">Planned</string>
    <string name="anime_status_completed">Completed</string>
    <string name="anime_status_on_hold">On hold</string>
    <string name="anime_status_dropped">Dropped</string>
    <string name="manga_ranking_all">All</string>
    <string name="manga_ranking_manga">Manga</string>
    <string name="manga_ranking_one_shot">One-shots</string>
    <string name="manga_ranking_doujins">Doujins</string>
    <string name="manga_ranking_light_novels">Light novels</string>
    <string name="manga_ranking_novels">Novels</string>
    <string name="manga_ranking_manhwa">Manhwa</string>
    <string name="manga_ranking_manhua">Manhua</string>
    <string name="manga_ranking_by_popularity">By popularity</string>
    <string name="manga_ranking_in_your_list">In your list</string>
    <string name="manga_status_all">All</string>
    <string name="manga_status_reading">Reading</string>
    <string name="manga_status_planned">Planned</string>
    <string name="manga_status_completed">Completed</string>
    <string name="manga_status_on_hold">On hold</string>
    <string name="manga_status_dropped">Dropped</string>
    <string name="user_anime_sort_by_rating">Highest rating</string>
    <string name="user_anime_sort_by_updated">Last updated</string>
    <string name="user_anime_sort_by_alphabetical">Alphabetical order</string>
    <string name="user_anime_sort_by_newest">Newest addition</string>
    <string name="user_manga_sort_by_rating">Highest rating</string>
    <string name="user_manga_sort_by_updated">Last updated</string>
    <string name="user_manga_sort_by_alphabetical">Alphabetical order</string>
    <string name="user_manga_sort_by_newest">Newest addition</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="redirect">Redirect</string>
    <string name="background">Background</string>
    <string name="user_details">User Details</string>
    <string name="statistics">Statistics</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="location">Location</string>
    <string name="timezone">Timezone</string>
    <string name="is_supporter">Is supporter</string>
    <string name="mean_score">Mean score</string>
    <string name="days_watched">Days watched</string>
    <string name="episodes_watched">Episodes watched</string>
    <string name="re_watch_count">Re-watch count</string>
    <string name="item_count">Item count</string>
    <string name="not_added">Not added</string>
    <string name="plus_1">+1</string>
    <string name="plus_5">+5</string>
    <string name="plus_10">+10</string>
    <string name="confirm">Confirm</string>
    <string name="synopsis">Synopsis</string>
    <string name="rating">Rating</string>
    <string name="genres">Genres</string>
    <string name="schedule">Schedule</string>
    <string name="studios">Studios</string>
    <string name="recommendations">Recommendations</string>
    <string name="related_anime">Related anime</string>
    <string name="related_manga">Related manga</string>
    <string name="enter_watched_episode_count">Enter watched episode count</string>
    <string name="popularity_rank">Popularity rank</string>
    <string name="mal_rank">MAL rank</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="other_titles">Other Titles</string>
    <string name="no_manga_added_under_this_filter">No manga added under this filter</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="authors">Authors</string>
    <string name="reading">Reading</string>
    <string name="share_your_dialog_hint">Share your</string>
    <string name="share_your_hint">"Share your MAL link to"</string>
    <string name="share_mal_profile">MAL profile</string>
    <string name="share_anime_list">Anime list</string>
    <string name="share_manga_list">Manga list</string>
    <string name="nsfw_rating">NSFW rating</string>
    <string name="serialization">Serialization</string>
    <string name="enter_read_count">Enter read count</string>
    <string name="search_for_any_manga">Search for any manga</string>
    <string name="reviews">Reviews</string>
    <string name="friends">Friends</string>
    <string name="history">History</string>
    <string name="clubs">Clubs</string>
    <string name="blogs">Blogs</string>
    <string name="forum_topics">Forum topics</string>
    <string name="profile_banner_description">Banner</string>
    <string name="profile_image_description">Profile image</string>
    <string name="collapse_button_description">Collapse button</string>
    <string name="settings_description">Settings</string>
</resources>