<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/fragment_profile">

    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/profile_banner_description"
        android:src="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/profile_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvName" />

    <ImageButton
        android:id="@+id/ibSettings"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/settings_description"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfileImage"
        app:layout_constraintStart_toEndOf="@id/ivProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/ivBanner"
        app:srcCompat="@drawable/ic_settings"
        app:tint="?colorOnSurface" />

    <ImageButton
        android:id="@+id/ibShare"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/share"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfileImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/ibSettings"
        app:layout_constraintTop_toBottomOf="@+id/ivBanner"
        app:srcCompat="@drawable/ic_share"
        app:tint="?colorOnSurface" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivBanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        tools:text="Cyber_Shark" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfileImage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvDetailsHint"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/user_details"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ibCollapseDetails"
                app:layout_constraintEnd_toStartOf="@id/ibCollapseDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ibCollapseDetails"
                android:layout_width="24dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/collapse_button_description"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_down" />

            <include
                android:id="@+id/profileDetailsCardContent"
                layout="@layout/profile_details_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ibCollapseDetails"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardProfileStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardProfileDetails">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvStatsHint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/statistics"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvStatsEmptyHint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvStatsHint" />

            <include
                android:id="@+id/profileStatsContent"
                layout="@layout/profile_stats_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvStatsHint"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:chipSpacing="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardProfileStats">

        <com.google.android.material.chip.Chip
            android:id="@+id/btnFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btnHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btnClubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clubs" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btnBlogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blogs" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btnReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btnForumTopics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_topics" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btnRecommendations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommendations" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>