<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clipChildren="true"
    android:clipToPadding="true"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:alpha="0.7"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="8dp"
            app:cardElevation="1dp"
            app:cardPreventCornerOverlap="true"
            app:contentPaddingBottom="4dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingRight="8dp"
            app:contentPaddingTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/ivAnimeBanner"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/anime"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_anime_placeholder"
            app:layout_constraintDimensionRatio="1:1.25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAnimeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ellipsize="end"
            android:lines="2"
            android:text="@string/n_a"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAnimeBanner"
            tools:text="Ano Hi Mita Hana no Namae wo Bokutachi wa Mada Shiranai." />

        <TextView
            android:id="@+id/tvEpisodesWatched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/episode_count_default_hint"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAnimeName"
            tools:text="12/12" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>